--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <title>Etch-a-Sketch</title>
 </head>
 <body>
-    
+    <div id="grid">
+
+    </div>
+
 
     <script src="main.js"></script>
 </body>
